--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,14 +8,14 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
+    --background: 140, 40%, 98%;
+    --foreground: 180, 88%, 6%;
     --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
+    --card-foreground: 180, 88%, 6%;
     --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
+    --popover-foreground: 180, 88%, 6%;
     --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
+    --primary-foreground: 140, 60%, 96%;
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
@@ -23,34 +23,46 @@ body {
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
     --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
+    --destructive-foreground: 140, 60%, 96%;
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
+    --ring: 180, 88%, 6%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --brand-1: 140, 60%, 96%;
+    --brand-2: 142, 56%, 74%;
+    --brand-3: 148, 47%, 68%;
+    --brand-4: 153, 41%, 62%;
+    --brand-5: 157, 37%, 56%;
+    --brand-6: 162, 34%, 50%;
+    --brand-7: 166, 38%, 45%;
+    --brand-8: 170, 46%, 38%;
+    --brand-9: 173, 57%, 33%;
+    --brand-10: 177, 71%, 27%;
+    --brand-11: 180, 94%, 21%;
+    --brand-12: 180, 88%, 6%;
     --radius: 0.5rem;
   }
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
+    --background: 180, 48%, 3%;
+    --foreground: 140, 60%, 96%;
     --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
+    --card-foreground: 140, 60%, 96%;
     --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
+    --popover-foreground: 140, 60%, 96%;
+    --primary: 140, 60%, 96%;
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
+    --secondary-foreground: 140, 60%, 96%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
     --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
+    --accent-foreground: 140, 60%, 96%;
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
+    --destructive-foreground: 140, 60%, 96%;
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
@@ -59,6 +71,19 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --brand-12: 140, 60%, 96%;
+    --brand-11: 142, 56%, 74%;
+    --brand-10: 148, 47%, 68%;
+    --brand-9: 153, 41%, 62%;
+    --brand-8: 157, 37%, 56%;
+    --brand-7: 162, 34%, 50%;
+    --brand-6: 166, 38%, 45%;
+    --brand-5: 170, 46%, 38%;
+    --brand-4: 173, 57%, 33%;
+    --brand-3: 177, 71%, 27%;
+    --brand-2: 180, 94%, 21%;
+    --brand-1: 180, 88%, 6%;
+    --radius: 0.5rem;
   }
 }
 
